tests/snapshots/snapshot_write__batch_summary_structure.snap
---
source: tests/snapshot_write.rs
assertion_line: 152
expression: event
---
{
  "type": "summary",
  "operations": 1,
  "succeeded": 1,
  "failed": 0,
  "dry_run": false,
  "elapsed_ms": "[redacted]"
}
