tests/snapshots/snapshot_write__edit_output_structure.snap
---
source: tests/snapshot_write.rs
assertion_line: 198
expression: event
---
{
  "bytes_after": 21,
  "bytes_before": 21,
  "checksum_after": "[redacted]",
  "checksum_before": "[redacted]",
  "diff_preview": " old_text",
  "edits": 1,
  "elapsed_ms": "[redacted]",
  "fuzzy": false,
  "indent_adjusted": false,
  "lines_after": 3,
  "lines_before": 3,
  "match_count": 1,
  "mode": "exact",
  "mtime_preserved": false,
  "path": "[redacted]",
  "strategies_tried": 1,
  "strategy": "exact",
  "type": "edit"
}
