tests/snapshots/snapshot_write__error_not_found_structure.snap
---
source: tests/snapshot_write.rs
expression: event
---
{
  "code": "FILE_NOT_FOUND",
  "error": true,
  "error_class": "permanent",
  "exit": 4,
  "message": "[redacted]",
  "path": "[redacted]",
  "retryable": false,
  "suggestion": "[redacted]"
}
