tests/snapshots/snapshot_write__read_output_structure.snap
---
source: tests/snapshot_write.rs
expression: event
---
{
  "binary": false,
  "bytes": 12,
  "checksum": "[redacted]",
  "content": "hello world\n",
  "kind": "text",
  "lines": 1,
  "mode": "full",
  "modified": "[redacted]",
  "path": "[redacted]",
  "permissions": "[redacted]",
  "type": "read"
}
