tests/snapshots/snapshot_write__replace_result_structure.snap
---
source: tests/snapshot_write.rs
assertion_line: 135
expression: event
---
{
  "bytes_after": 15,
  "bytes_before": 15,
  "checksum_after": "[redacted]",
  "checksum_before": "[redacted]",
  "elapsed_ms": "[redacted]",
  "fuzzy": false,
  "mtime_preserved": false,
  "path": "[redacted]",
  "replacements": 1,
  "strategies_tried": 1,
  "strategy": "exact",
  "type": "replaced"
}

