tests/snapshots/snapshot_write__search_match_structure.snap
---
source: tests/snapshot_write.rs
expression: event
---
{
  "byte_offset": "[redacted]",
  "line_number": 1,
  "lines": "hello world",
  "path": "[redacted]",
  "submatches": [
    {
      "end": 5,
      "match": "hello",
      "start": 0
    }
  ],
  "type": "match"
}
