tests/snapshots/snapshot_write__write_output_structure.snap
---
source: tests/snapshot_write.rs
assertion_line: 30
expression: event
---
{
  "bytes_written": 17,
  "checksum": "[redacted]",
  "elapsed_ms": "[redacted]",
  "path": "[redacted]",
  "platform": {
    "dir_fsync": "[platform_dir_fsync]",
    "durability": "fast",
    "fsync": "[platform_fsync]",
    "rename_method": "renameat2"
  },
  "status": "success",
  "stdin_bytes_read": 17,
  "type": "write",
  "wal_policy": "auto"
}

